--- a/client/src/components/Vcq.css
+++ b/client/src/components/Vcq.css
@@ -1,5 +1,4 @@
 .vcq {
-  background-color: #0e1a35;
   color: #fff;
   font-family: Arial, sans-serif;
   padding: 20px;
@@ -50,7 +49,7 @@ nav li {
   text-align: center;
   position: relative;
   overflow: hidden;
-  padding: 40px 0; /* Added padding for better visibility */
+  padding: 40px 0;
 }
 
 .hero::before {
